# varisat

varisat/: Cargo.toml
varisat-checker/: Cargo.toml
varisat-cli/: Cargo.toml
varisat-dimacs/: Cargo.toml
varisat-formula/: Cargo.toml
varisat-internal-macros/: Cargo.toml
varisat-internal-proof/: Cargo.toml
varisat-lrat/: Cargo.toml
