[package]
name = "varisat-dimacs"
version = "0.2.2"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "DIMCAS CNF parser and writer for the Varisat SAT solver"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
itoa = "0.4.8"
anyhow = "1.0.94"
thiserror = "2.0.6"
[dependencies.varisat-formula]
path = "../varisat-formula"
version = "=0.2.2"

[dev-dependencies]
proptest = "1.5.0"
rand = "0.8.5"
tempfile = "3.14.0"
env_logger = "0.11.5"

[dev-dependencies.varisat-formula]
path = "../varisat-formula"
version = "=0.2.2"
features = ["proptest-strategies", "internal-testing"]
