[package]
name = "varisat-internal-macros"
version = "0.2.2"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "Internal macros for the Varisat SAT solver"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
synstructure = "0.12.6"
proc-macro2 = "1.0.92"
syn = "1.0.109"
quote = "1.0.37"
regex = "1.11.1"
