[package]
name = "varisat-internal-proof"
version = "0.2.2"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "Internal proof format for the Varisat SAT solver"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.94"

    [dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.2"

[dev-dependencies]
proptest = "1.5.0"
