[package]
name = "varisat"
description = "A CDCL based SAT solver (library)"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
version = "0.2.2"
authors = ["Jannis Harder <me@jix.one>"]
license = "MIT/Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"


[dependencies]
itoa = "0.4.8"
log = "0.4.22"
ordered-float = "4.5.0"
partial_ref = "0.3.3"
serde = { version = "1.0.215", features = ["derive"] }
leb128 = "0.2.5"
vec_mut_scan = "0.5.0"
rustc-hash = "2.1.0"
anyhow = "1.0.94"
thiserror = "2.0.6"

[dependencies.varisat-internal-macros]
path = "../varisat-internal-macros"
version = "=0.2.2"

[dependencies.varisat-formula]
path = "../varisat-formula"
version = "=0.2.2"

[dependencies.varisat-dimacs]
path = "../varisat-dimacs"
version = "=0.2.2"

[dependencies.varisat-internal-proof]
path = "../varisat-internal-proof"
version = "=0.2.2"

[dependencies.varisat-checker]
path = "../varisat-checker"
version = "=0.2.2"

[dev-dependencies]
proptest = "1.5.0"
rand = "0.8.5"
tempfile = "3.14.0"
env_logger = "0.11.5"

[dev-dependencies.varisat-formula]
path = "../varisat-formula"
version = "=0.2.2"
features = ["proptest-strategies", "internal-testing"]

[build-dependencies]
anyhow = "1.0.94"
